Fixing Bubbles overflow

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
 
 .scroll {
   background-color: rgb(145, 213, 244);
+  color: black;
   min-width: 320px;
   transition: all 0.1s;
 }
